--- a/index.css
+++ b/index.css
@@ -1,3 +1,13 @@
 .more {
     display: none;
 }
+
+
+.maincontent{
+    margin-bottom: 10px;
+}
+
+.img-fluid {
+    width: 100%;
+    height: auto;
+}
