--- a/index.css
+++ b/index.css
@@ -8,17 +8,29 @@
 .show {
     display: block;
 }
-
-
+.navbar-dark .navbar-brand {
+    color: skyblue;
+}
+.navbar-dark .navbar-nav .nav-link {
+    color: deeppink;
+}
+ .navbar-dark .navbar-nav .nav-link.active,
+ .navbar-dark .navbar-nav .show>.nav-link {
+     color: deeppink;
+ }
 footer {
-    background: #708788;
+    background: black;
     padding: 10px 0;
     text-align: center;
-    height: 100vh;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height:[footer-height]
 }
 
 footer a {
-    color: #70726F;
+    color: #d30796;
     font-size: 20px;
     padding: 10px;
     border-right: 1px solid #70726F;
@@ -30,5 +42,5 @@ footer a:first-child {
 }
 
 footer a:hover {
-    color: white;
+    color: rgb(19, 17, 17);
 }
