--- a/about.Css
+++ b/about.Css
@@ -7,6 +7,16 @@ html {
     box-sizing: border-box;
 }
 
+footer {
+    background: black;
+    padding: 10px 0;
+    text-align: center;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: [footer-height];
+}
 *,
 *:before,
 *:after {
