--- a/contact.Css
+++ b/contact.Css
@@ -2,7 +2,7 @@ footer {
     background: black;
     padding: 10px 0;
     text-align: center;
-    position:absolute;
+    position:fixed;
     left: 0;
     right: 0;
     bottom:0;
