--- a/contact.Css
+++ b/contact.Css
@@ -41,6 +41,8 @@ input[type=submit]:hover {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 10px;
+    top: 0px;
+    bottom:50px;
 }
 
 /* Create two columns that float next to eachother */
