--- a/contact.Css
+++ b/contact.Css
@@ -8,6 +8,10 @@ footer {
     bottom:0;
     height: [footer-height];
 }
+.container{
+    background-color: blanchedalmond;
+    max-width: fit-content;
+}
 * {
     box-sizing: border-box;
 }
