--- a/about.Css
+++ b/about.Css
@@ -26,7 +26,7 @@ footer {
 .column {
     float: left;
     width: 33.3%;
-    margin-bottom: 16px;
+    margin-bottom: 18px;
     padding: 0 8px;
 }
 
@@ -44,6 +44,7 @@ footer {
 
 .container {
     padding: 0 16px;
+    max-width: initial;
 }
 
 .container::after,
