--- a/contact.Css
+++ b/contact.Css
@@ -41,10 +41,11 @@ input[type=submit]:hover {
 /* Style the container/contact section */
 .container {
     border-radius: 5px;
-    background-color:blanchedalmond;
+    background-color: blanchedalmond;
+    padding-bottom: 10px;
     padding: 10px;
     top: 0px;
-    bottom:50px;
+    bottom: 50px;
     max-width: fit-content;
 }
 
