--- a/sportdata.css
+++ b/sportdata.css
@@ -1,6 +1,9 @@
 body{
 background-color: blanchedalmond;
 }
+/* .show {
+    display: block;
+} */
 
 .dropcheck{
     background-color: rgb(219, 139, 139);
